This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

26-Jul-2003 (Lars Duening)  (3.3.466)
  - (mapping.c) Taking a cue from 3.2.10-594, the number of times a mapping
       is checked for destructed elements has been reduced. This was less of
       a problem than in 3.2.10, but still occured far too often,
  - (mapping.c) The mapping compaction criterium has been extended to
       guarantee a compaction after 2 * TIME_TO_COMPACT seconds idle time.

25-Jul-2003 (Lars Duening)  (3.3.465)
  - (mudlib/dhrystone.c) The time measurement was off by factor 10.
  - (smalloc.c) Implemented a lazy defragmentation scheme for the
       free small blocks.

24-Jul-2003 (Lars Duening)  (3.3.464)
  - (configure) Improved the detection of libcrypt and libcrypto.
  - (bytecode.h, hosts/crypt.c) Added a number of macros to deal with 64-bit
       machines (untested).

23-Jul-2003 (Lars Duening)  (3.3.463)
  - (sysmalloc.c, ptmalloc/malloc.c) Corrected compilation errors (reported by
       Tomba).

22-Jul-2003 (Lars Duening)
  - (object.c) Cleaned up the code in restore_object() a wee bit.

21-Jul-2003 (Lars Duening)  (3.3.462)
  - (interpret.c) The -= operator didn't work when subtracting an int
       from an int: a missing break caused it to flag a non-existant
       argument error.

17-Jul-2003 (Lars Duening)  (3.3.461)
  - (prolang.y) Made the cast checks more informative.

17-Jul-2003 (Lars Duening)  (3.3.460)
  - (interpret.c) The operators -=, /= and *= can now operate on 
       <int> x <float> values, yielding a <float> result.
  - (prolang.y) Casts with no effect generate a warning.

17-Jul-2003 (Lars Duening)  (3.3.459)
  - (i-svalue_cmp.h) When comparing closures for equality, the result was
       reveresed (reported by Fantom).
  - (array.c, interpret.c) Replaced uses of closure_cmp() with closure_eq()
       where appropriate.

10-Jul-2003 (Lars Duening)  (3.3.458)