@@ -88,7 +88,7 @@ EXAMPLES
         m = ([ 1:-1, 3:-3 ]);
 
         map(arr, #'%, 2)  --> returns ({ 1, 0, 1, 0 })
-        map(arr, m)       --> returns ([ -1, 2, -3, 4 })
+        map(arr, m)       --> returns ({ -1, 2, -3, 4 })
 
 
 HISTORY
